<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"   >


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:clickable="false"
        android:id="@+id/layout_button_menu"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/eliminar"
            android:id="@+id/btnEliminarAlarma"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#3ac1c6"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardview_default_elevation"
        card_view:cardUseCompatPadding="true"
        android:layout_margin="5dp"
        android:id="@+id/card_desliza"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/imgAlarma"
                android:src="@drawable/alarmas"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="80dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/imgAlarma"
                android:layout_toEndOf="@+id/imgAlarma"
                android:layout_marginLeft="10dp"
                android:background="#ffffff"
                android:id="@+id/viewLine"/>

            <!--informacion-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informacion"
                android:textSize="15sp"
                android:id="@+id/txtInformacion"
                android:textColor="#fff"
                android:layout_below="@+id/txtFechaAlarma"
                android:layout_alignLeft="@+id/txtFechaAlarma"
                android:layout_alignStart="@+id/txtFechaAlarma" />

            <!--Fecha-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha"
                android:textSize="20sp"
                android:id="@+id/txtFechaAlarma"
                android:textColor="#fff"
                android:layout_below="@+id/txtNotificationId"
                android:layout_alignLeft="@+id/txtNotificationId"
                android:layout_alignStart="@+id/txtNotificationId" />

            <!--Duration-->

            <!--NotificationId-->

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/notificationID"
                android:textSize="25sp"
                android:id="@+id/txtNotificationId"
                android:textColor="#fff"
                android:layout_marginLeft="11dp"
                android:layout_marginStart="11dp"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/viewLine"
                android:layout_toEndOf="@+id/viewLine" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="seg"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:id="@+id/seg"
                android:textColor="#fff"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="25sp"
                android:id="@+id/txtDuration"
                android:textColor="#fff"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/seg"
                 />


        </RelativeLayout>

    </android.support.v7.widget.CardView>

    </RelativeLayout>